Сделал экран для событий с настройкой в переменных окружения

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,4 @@
 VITE_API_SERVER=http://localhost:5051
+#VITE_ALTERNATIVE_MESSAGE="Пожалуйста, соблюдайте тишину!<br/>Идет экзамен!"
+#VITE_ALTERNATIVE_DATE_LIST=["2025-05-26","2025-05-29","2025-06-03","2025-06-06","2025-06-09","2025-06-16"]
+#VITE_ALTERNATIVE_CABINET_LIST=[{"building":"high","room":218}]
