--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "sass": "^1.87.0",
-    "vite": "^6.3.3"
+    "sass": "1.77.6",
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.5"
+    "bootstrap": "^5.3.6"
   }
 }
